Adding api to get account id by token and auth type
